src/widgets/widgets/qmenu.cpp
@@ -1583,9 +1583,7 @@ bool QMenuPrivate::hasMouseMoved(const QPoint &globalPos)
 {
     //determines if the mouse has moved (ie its initial position has
     //changed by more than QApplication::startDragDistance()
-    //or if there were at least 6 mouse motions)
-    return motions > 6 ||
-        QApplication::startDragDistance() < (mousePopupPos - globalPos).manhattanLength();
+    return QApplication::startDragDistance() < (mousePopupPos - globalPos).manhattanLength();
 }
 
 
